--- a/_posts/2019-06-30-the-us-narrative-today.html
+++ b/_posts/2019-06-30-the-us-narrative-today.html
@@ -2546,107 +2546,107 @@ stories:
   domain: http://www.elynews.com/
   link: https://elynews.com/2019/06/28/michaels-joins-newspaper-staff/
 images:
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
-- name: dragon-desert-desert-dragon-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-yellow-paper.jpg
-- name: old-door-lock-old-door-lock-2-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-ww2-color.jpg
-- name: stories-supreme-court-statues.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-supreme-court-statues.jpg
-- name: birdhouse-birdhouse-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-satan-red.jpg
-- name: border-crossing-bordercrossing-matrix.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-matrix.png
-- name: oldtrain-oldtrain-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-ww2-dresden.jpg
-- name: containership-containership-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-smooth-ride.jpg
-- name: wind-mills-windmills-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alien-goggles.jpg
-- name: beach-rocks-beach-rocks-currents-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-soul.jpg
-- name: dragon-desert-desert-dragon-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-feed-people.jpg
-- name: san-francisco-street-view-san-francisco-street-view-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-wols.jpg
-- name: ellis-island-ellis-island-room-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-bright-sand.jpg
-- name: store-on-corner-oldcabin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-marcel-duchamp.jpg
-- name: beach-rocks-beach-rocks-currents-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-clean-view.jpg
-- name: aws-s3-stories-supreme-court-judgement.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-supreme-court-judgement.jpg
-- name: aws-s3-square-C2L6QJRUcAEVlYF.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2L6QJRUcAEVlYF.jpg
-- name: border-crossing-bordercrossing-satan-red.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-satan-red.png
-- name: aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-32-161-800-500-0-max-0--5--1.jpg
-- name: crow-crow-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-purple-pond.jpg
-- name: containership-bw-storytelling-colored-circuits.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colored-circuits.png
-- name: liberty-back-statue-liberty-back-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-satan-red.jpg
-- name: server-cloud-server-racks-clouds-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-oily-mcoilface.jpg
-- name: cargo-ship-cargo-ship-on-sea-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-creativity.jpg
-- name: miamibeach-miamibeach-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-sand-paper.jpg
-- name: store-on-corner-store-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-ww2-color.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-smoking-cigarette.jpg
-- name: blossombar-gan-vogh-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gan-vogh-file-00-00-24-99.jpg
-- name: oldhouse-granaryfield-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-dresden.jpg
-- name: berlinwall2-berlinwall-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-light-dali.jpg
-- name: white-house-lawn-white-house-window-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-satan-red.jpg
-- name: white-house-whitehouse-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-ww2-color.jpg
-- name: machine-road-machine-road-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-satan-red.jpg
-- name: flower-barbed-wire-flower-barbed-wire-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dali-three.jpg
-- name: nyc-flag-nycflag-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-dali.jpg
-- name: gypsy-wagon-gypsywagon-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purp-paper.jpg
-- name: status-berlin-status-berlin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
-- name: white-house-lawn-white-house-lawn-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alien-goggles.jpg
-- name: berlinwall-DSC-0084-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-neo-instinct.jpg
-- name: walled-garden-walled-garden-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-hot-spicy.jpg
-- name: bordercrossing-bordercrossing-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-purp-paper.jpg
-- name: christianity-christianity-under-construction-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-kand-two.jpg
-- name: store-on-corner-store-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crafty-painting.jpg
-- name: windowmountain-window-mountain-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smooth-ride.jpg
-- name: carry-load-carryload-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-emily-carr.jpg
-- name: amusement-park-amusement-park-2-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dry-skin.jpg
-- name: san-francisco-city-bridge-sf-city-bridge.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-spagetti-accident.jpg
-- name: udnie-downtown-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-downtown-building.jpg
-- name: oldtrain-oldtrain-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-colored-circuits.jpg
+- name: bordercrossing-bordercrossing-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-light-dali.jpg
+- name: abandonedbuildings_green_zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_green_zuma.jpg
+- name: locked-up-steam-lock-up-steam-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-sand-paper.jpg
+- name: birdhouse-birdhouse-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-sunday.jpg
+- name: oldroad-old-road-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-rain.jpg
+- name: yosemite-yosemite-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-creativity.jpg
+- name: liberty-back-statue-liberty-back-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-creativity.jpg
+- name: oldhouse-oldhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-mucha-mult.jpg
+- name: white-house-whitehouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dali-two.jpg
+- name: razorcliff-razorcliff-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-satan-red.jpg
+- name: machine-road-machine-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-marcel-duchamp.jpg
+- name: status-berlin-status-berlin-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-feed-people.jpg
+- name: sand-hand-sand-hand-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-brush.jpg
+- name: locked-up-steam-lock-up-steam-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-circuit-5.jpg
+- name: beach-rocks-beach-rocks-currents-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gan-vogh.jpg
+- name: containership-containership-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-marcel-duchamp.jpg
+- name: aws-s3-stories-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-carryload-diego-rivera1.jpg
+- name: powerlines-power-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crunch-paper.jpg
+- name: abandonedbuildings_sand_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_sand_paper.jpg
+- name: supreme-court-supremecourt-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-umberto-bocc.jpg
+- name: powerlines-power-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-matrix.jpg
+- name: oldbarn-oldbarn-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-wols.jpg
+- name: nazi-invasion-IMG_8352.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8352.jpg
+- name: oldhouse-oldhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-paper.jpg
+- name: supreme-court-supremecourt-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colored-circuits.jpg
+- name: flower-barbed-wire-flower-barbed-wire-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-post-modern.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-clean-view.jpg
+- name: liberty-back-statue-liberty-back-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-rain.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-granite.jpg
+- name: miamibeach-miamibeach-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-bright-sand.jpg
+- name: oldroad-old-road-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-hot-spicy.jpg
+- name: oldcabin-store-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-green-zuma.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-marcel-duchamp.jpg
+- name: eduardo-eduardo-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-gred-mash.jpg
+- name: fence-mexico-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-colorful-dream.jpg
+- name: oldhouse-oldhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-alien-goggles.jpg
+- name: christianity-christianity-under-construction-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-light-dali.jpg
+- name: walled-garden-walled-garden-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-light-dali.jpg
+- name: desert-dragon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-dark-dali.jpg
+- name: downtown-los-angeles-downtown-la-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-soul.JPG
+- name: oldhouse-oldhouse-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-wols.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-space-pizza.jpg
+- name: oldhousecars-house-old-cars-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-alien-goggles.jpg
+- name: oldroad-old-road-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smoking-cigarette.jpg
+- name: blossombar-sunday-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-24-99.jpg
+- name: old-granary-field-granaryfield-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dali-three.jpg
+- name: server-cloud-server-racks-clouds-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-ww2-color.jpg
+- name: razorwire-DSC-0080-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-aqua.jpg
+- name: old-cabin-oldcabin-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-bright-sand.jpg
+- name: dc-statue-dcstatue-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-crabapple.jpg
 ---
 Downtown Bristols First Nationally Branded Hotel Breaks Ground On State Street.&nbsp;Vote Set On Squirrel Run Pump Station Rehab Project.&nbsp;State Money Fortifies Local School Safety.&nbsp;Kendall Jenner And Kim Kardashian Love Rays Candy Store.&nbsp;Tens Of Thousands Protest Army Rule In Sudan.&nbsp;Charleston County Parks Hosts Second Annual Youth Triathlon In July.&nbsp;Consignment Shop Hosts Workshop On Mending Clothes.&nbsp;Crossing The Line Wolf Lake.&nbsp;
